[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/textures/miscs/warfarm.jpg" type="Texture" id=1]
[ext_resource path="res://assets/textures/miscs/logo.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/miscs/start_game.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/miscs/exit.png" type="Texture" id=4]
[ext_resource path="res://assets/scripts/global/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://assets/textures/miscs/exit_selected.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/miscs/start_game_selected.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/welcome.ogg" type="AudioStream" id=8]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 78.0
margin_right = 1202.0
margin_bottom = 720.0
size_flags_horizontal = 4
custom_constants/separation = 32

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 1124.0
margin_bottom = 537.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 530.0
margin_top = 569.0
margin_right = 594.0
margin_bottom = 701.0
size_flags_horizontal = 4

[node name="StartButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 7 )

[node name="ExitButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
